# scrollo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: coverage.yml  lint.yml
data/: settings.json
src/scroller_app/: __init__.py  app.py  config.py  data_sources.py  models.py  renderer.py  services.py  state.py  web.py
src/scroller_app/static/: styles.css
src/scroller_app/templates/: index.html
tests/: test_config_store.py  test_data_sources.py  test_models_extra.py
